Add stock and sale groups in user redyser cron

--- a/tryton.cfg
+++ b/tryton.cfg
@@ -4,6 +4,9 @@ depends:
     carrier_send_shipments
     stock_shipment_weight
     smtp
+extras_depend:
+    sale
 xml:
     api.xml
     shipment.xml
+    sale.xml
